// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsComponent /> should render correctly 1`] = `
<div
  style="width:500px;height:500px"
>
  <div
    class="rc-tabs rc-tabs-top"
  >
    <div
      class="rc-tabs-bar"
      role="tablist"
      tabindex="-1"
    >
      <input
        id="input"
        style="float:right"
      />
      <div
        class="rc-tabs-nav-container"
      >
        <span
          class="rc-tabs-tab-prev rc-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="rc-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="rc-tabs-tab-next rc-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="rc-tabs-tab-next-icon"
          />
        </span>
        <div
          class="rc-tabs-nav-wrap"
        >
          <div
            class="rc-tabs-nav-scroll"
          >
            <div
              class="rc-tabs-nav rc-tabs-nav-animated"
            >
              <div>
                <div
                  aria-controls="tabpane-1"
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-tabs-tab-active rc-tabs-tab"
                  id="tab-1"
                  role="tab"
                  tabindex="0"
                >
                  Tab 1
                </div>
                <div
                  aria-controls="tabpane-2"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-2"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 2
                </div>
                <div
                  aria-controls="tabpane-3"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-3"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 3
                </div>
                <div
                  aria-controls="tabpane-4"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-4"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 4
                </div>
                <div
                  aria-controls="tabpane-5"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-5"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 5
                </div>
              </div>
              <div
                class="rc-tabs-ink-bar rc-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs-content rc-tabs-content-animated"
      style="transform:translateX(0%) translateZ(0);-webkit-transform:translateX(0%) translateZ(0);-moz-transform:translateX(0%) translateZ(0)"
    >
      <div
        aria-hidden="false"
        class="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
        style="visibility:visible"
        tabindex="0"
      >
        <div>
          <input
            id="input-1"
          />
          <button
            type="button"
          >
            Button 1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`<TabsComponent withTabKey /> should render correctly 1`] = `
<div
  style="width:500px;height:500px"
>
  <div
    class="rc-tabs rc-tabs-top"
  >
    <div
      class="rc-tabs-bar"
      role="tablist"
      tabindex="-1"
    >
      <input
        id="input"
        style="float:right"
      />
      <div
        class="rc-tabs-nav-container"
      >
        <span
          class="rc-tabs-tab-prev rc-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="rc-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="rc-tabs-tab-next rc-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="rc-tabs-tab-next-icon"
          />
        </span>
        <div
          class="rc-tabs-nav-wrap"
        >
          <div
            class="rc-tabs-nav-scroll"
          >
            <div
              class="rc-tabs-nav rc-tabs-nav-animated"
            >
              <div>
                <div
                  aria-controls="tabpane-1"
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-tabs-tab-active rc-tabs-tab"
                  id="tab-1"
                  role="tab"
                  tabindex="0"
                >
                  Tab 1
                </div>
                <div
                  aria-controls="tabpane-2"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-2"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 2
                </div>
                <div
                  aria-controls="tabpane-3"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-3"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 3
                </div>
                <div
                  aria-controls="tabpane-4"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-4"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 4
                </div>
                <div
                  aria-controls="tabpane-5"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-5"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 5
                </div>
              </div>
              <div
                class="rc-tabs-ink-bar rc-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs-content rc-tabs-content-animated"
      style="transform:translateX(0%) translateZ(0);-webkit-transform:translateX(0%) translateZ(0);-moz-transform:translateX(0%) translateZ(0)"
    >
      <div
        aria-hidden="false"
        aria-labelledby="tab-1"
        class="rc-tabs-tabpane rc-tabs-tabpane-active"
        id="tabpane-1"
        role="tabpanel"
        style="visibility:visible"
        tabindex="0"
      >
        <div>
          <input
            id="input-1"
          />
          <button
            type="button"
          >
            Button 1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tab-2"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-2"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        aria-labelledby="tab-3"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-3"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        aria-labelledby="tab-4"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-4"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        aria-labelledby="tab-5"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-5"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`<TabsComponent withTabKey withCustomId /> should render correctly 1`] = `
<div
  style="width:500px;height:500px"
>
  <div
    class="rc-tabs rc-tabs-top"
    id="CUSTOM_ID"
  >
    <div
      class="rc-tabs-bar"
      role="tablist"
      tabindex="-1"
    >
      <input
        id="input"
        style="float:right"
      />
      <div
        class="rc-tabs-nav-container"
      >
        <span
          class="rc-tabs-tab-prev rc-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="rc-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="rc-tabs-tab-next rc-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="rc-tabs-tab-next-icon"
          />
        </span>
        <div
          class="rc-tabs-nav-wrap"
        >
          <div
            class="rc-tabs-nav-scroll"
          >
            <div
              class="rc-tabs-nav rc-tabs-nav-animated"
            >
              <div>
                <div
                  aria-controls="tabpane-1-CUSTOM_ID"
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-tabs-tab-active rc-tabs-tab"
                  id="tab-1-CUSTOM_ID"
                  role="tab"
                  tabindex="0"
                >
                  Tab 1
                </div>
                <div
                  aria-controls="tabpane-2-CUSTOM_ID"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-2-CUSTOM_ID"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 2
                </div>
                <div
                  aria-controls="tabpane-3-CUSTOM_ID"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-3-CUSTOM_ID"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 3
                </div>
                <div
                  aria-controls="tabpane-4-CUSTOM_ID"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-4-CUSTOM_ID"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 4
                </div>
                <div
                  aria-controls="tabpane-5-CUSTOM_ID"
                  aria-disabled="false"
                  aria-selected="false"
                  class=" rc-tabs-tab"
                  id="tab-5-CUSTOM_ID"
                  role="tab"
                  tabindex="-1"
                >
                  Tab 5
                </div>
              </div>
              <div
                class="rc-tabs-ink-bar rc-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs-content rc-tabs-content-animated"
      style="transform:translateX(0%) translateZ(0);-webkit-transform:translateX(0%) translateZ(0);-moz-transform:translateX(0%) translateZ(0)"
    >
      <div
        aria-hidden="false"
        aria-labelledby="tab-1-CUSTOM_ID"
        class="rc-tabs-tabpane rc-tabs-tabpane-active"
        id="tabpane-1-CUSTOM_ID"
        role="tabpanel"
        style="visibility:visible"
        tabindex="0"
      >
        <div>
          <input
            id="input-1"
          />
          <button
            type="button"
          >
            Button 1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tab-2-CUSTOM_ID"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-2-CUSTOM_ID"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        aria-labelledby="tab-3-CUSTOM_ID"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-3-CUSTOM_ID"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        aria-labelledby="tab-4-CUSTOM_ID"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-4-CUSTOM_ID"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        aria-labelledby="tab-5-CUSTOM_ID"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        id="tabpane-5-CUSTOM_ID"
        role="tabpanel"
        style="visibility:hidden"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
